--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.5",
