--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "mernui",
+  "name": "react_redux_crud_bootstrap_next",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
-    "react-bootstrap-table": "^4.3.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^3.0.5",
-    "react-router-bootstrap": "^0.23.3",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "1.0.11",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "prop-types": "*",
+    "react": "^16.4.2",
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-table-next": "*",
+    "react-dom": "^16.4.2",
+    "react-redux": "*",
+    "react-router": "^4.3.1",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "*",
+    "react-scripts": "^1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "*"
   },
   "scripts": {
     "start": "react-scripts start",
